// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestedCollection should render connected component 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 18px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-top: 6px solid currentColor;
  border-bottom: 0;
  color: currentColor;
}

<a
    aria-current="page"
    class="emotion-0 emotion-1 sidebar-active"
    data-testid="/"
    depth="0"
    href="/collections/pages"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        Pages
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 34px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-left: 6px solid currentColor;
  border-right: 0;
  color: currentColor;
  left: 2px;
}

<a
    class="emotion-0 emotion-1"
    data-testid="/a"
    depth="1"
    href="/collections/pages/filter/a"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        File 1
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 34px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-left: 6px solid currentColor;
  border-right: 0;
  color: currentColor;
  left: 2px;
}

<a
    class="emotion-0 emotion-1"
    data-testid="/b"
    depth="1"
    href="/collections/pages/filter/b"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        File 2
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`NestedCollection should render correctly with nested entries 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 18px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-top: 6px solid currentColor;
  border-bottom: 0;
  color: currentColor;
}

<a
    aria-current="page"
    class="emotion-0 emotion-1 sidebar-active"
    data-testid="/"
    depth="0"
    href="/collections/pages"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        Pages
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 34px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-left: 6px solid currentColor;
  border-right: 0;
  color: currentColor;
  left: 2px;
}

<a
    class="emotion-0 emotion-1"
    data-testid="/a"
    depth="1"
    href="/collections/pages/filter/a"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        File 1
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 34px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-left: 6px solid currentColor;
  border-right: 0;
  color: currentColor;
  left: 2px;
}

<a
    class="emotion-0 emotion-1"
    data-testid="/b"
    depth="1"
    href="/collections/pages/filter/b"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        File 2
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
</DocumentFragment>
`;

exports[`NestedCollection should render correctly with no entries 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  padding-left: 18px;
  border-left: 2px solid #fff;
}

.emotion-0 mocked-icon {
  margin-right: 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-right: 4px;
}

.emotion-6 {
  position: relative;
  top: 2px;
  color: #fff;
  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-radius: 2px;
  border-left: 6px solid currentColor;
  border-right: 0;
  color: currentColor;
  left: 2px;
}

<a
    class="emotion-0 emotion-1"
    data-testid="/"
    depth="0"
    href="/collections/pages"
  >
    <mocked-icon
      type="write"
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        Pages
      </div>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
  </a>
</DocumentFragment>
`;
